--- a/rest-microservices/gestione-migrante.properties
+++ b/rest-microservices/gestione-migrante.properties
@@ -1,7 +1,8 @@
 server.port=8080
 spring.application.name=gestione-migrante
 
-
+spring.redis.host=myredis
+spring.redis.port=6379
 #===================================
 ### EUREKA
 #===================================
