--- a/rest-microservices/monolito.properties
+++ b/rest-microservices/monolito.properties
@@ -2,6 +2,10 @@
 server.port=8080
 spring.application.name=monolito
 
+
+spring.redis.host=myredis
+spring.redis.port=6379
+
 #===================================
 ### EUREKA
 #===================================
