--- a/rest-microservices/authentication.properties
+++ b/rest-microservices/authentication.properties
@@ -1,6 +1,8 @@
 server.port=8080
 spring.application.name=authentication
 
+spring.redis.host=myredis
+spring.redis.port=6379
 #===================================
 ### EUREKA
 #===================================
