--- a/rest-microservices/ui.properties
+++ b/rest-microservices/ui.properties
@@ -7,3 +7,7 @@ spring.application.name=ui
 eureka.client.serviceUrl.defaultZone=http://eureka:8761/eureka/
 eureka.instance.metadata-map.instanceId=${spring.application.name}:${random.value}
 eureka.instance.appname=${spring.application.name}
+
+
+spring.redis.host=myredis
+spring.redis.port=6379
