changed initdb eureka

--- a/rest-microservices/monolito-initdb.properties
+++ b/rest-microservices/monolito-initdb.properties
@@ -25,3 +25,4 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.main.web-application-type=none
 
 spring.cloud.stream.kafka.binder.brokers=kafka
+eureka.client.enabled=false
