--- a/rest-microservices/eureka-server.yml
+++ b/rest-microservices/eureka-server.yml
@@ -10,3 +10,5 @@ eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
+    service-url:
+      defaultZone: http://eureka:8761/eureka
