--- a/rest-microservices/eureka-server.yml
+++ b/rest-microservices/eureka-server.yml
@@ -10,5 +10,5 @@ eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
-    service-url:
-      defaultZone: http://eureka:8761/eureka
+  server:
+    enable-self-preservation: false
