--- a/rest-microservices/eureka-server.yml
+++ b/rest-microservices/eureka-server.yml
@@ -7,8 +7,10 @@ spring:
     host: myredis
     port: 6379
 eureka:
+  instance:
+    hostname: localhost
   client:
     register-with-eureka: false
     fetch-registry: false
-  server:
-    enable-self-preservation: false
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
