--- a/rest-microservices/eureka-server.yml
+++ b/rest-microservices/eureka-server.yml
@@ -16,3 +16,5 @@ eureka:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
   server:
     waitTimeInMsWhenSyncEmpty: 0
+    eviction-interval-timer-in-ms: 1000
+    
