--- a/rest-microservices/gestione-migrante.properties
+++ b/rest-microservices/gestione-migrante.properties
@@ -3,10 +3,11 @@ spring.application.name=gestione-migrante
 
 spring.redis.host=myredis
 spring.redis.port=6379
+management.security.sessions=never
 #===================================
 ### EUREKA
 #===================================
-eureka.client.serviceUrl.defaultZone=http://eureka:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://discUser:discPassword@eureka:8761/eureka/
 eureka.instance.metadata-map.instanceId=${spring.application.name}:${random.value}
 eureka.instance.appname=${spring.application.name}
 
