--- a/rest-microservices/monolito.properties
+++ b/rest-microservices/monolito.properties
@@ -5,11 +5,11 @@ spring.application.name=monolito
 
 spring.redis.host=myredis
 spring.redis.port=6379
-
+management.security.sessions=never
 #===================================
 ### EUREKA
 #===================================
-eureka.client.serviceUrl.defaultZone=http://eureka:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://discUser:discPassword@eureka:8761/eureka/
 eureka.instance.metadata-map.instanceId=${spring.application.name}:${random.value}
 eureka.instance.appname=${spring.application.name}
 
