--- a/rest-microservices/ui.properties
+++ b/rest-microservices/ui.properties
@@ -4,10 +4,24 @@ spring.application.name=ui
 #===================================
 ### EUREKA
 #===================================
-eureka.client.serviceUrl.defaultZone=http://eureka:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://discUser:discPassword@eureka:8761/eureka/
 eureka.instance.metadata-map.instanceId=${spring.application.name}:${random.value}
 eureka.instance.appname=${spring.application.name}
 
 
 spring.redis.host=myredis
 spring.redis.port=6379
+
+management.security.sessions=always
+
+zuul.routes.gestione-migranti.path=/migranti/**
+zuul.routes.gestione-migranti.sensitive-headers=Set-Cookie,Authorization
+hystrix.command.gestione-migranti.execution.isolation.thread
+    .timeoutInMilliseconds=600000
+
+
+zuul.routes.eureka.path=/eureka/**
+zuul.routes.eureka.sensitive-headers=Set-Cookie,Authorization
+zuul.routes.eureka.url=http://eureka:8761
+hystrix.command.discovery.execution.isolation.thread
+    .timeoutInMilliseconds=600000
